--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: "https://yannock.github.io"
 baseurl: ""  # laisse vide ("") si c'est ton user.github.io
 
 author:
-  name: "Yannock"
+  name: "Yannock Verne"
   email: ""  # optionnel
 
 # Navigation principale
