--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,8 @@
 title: "Yannock / Yannock Verne"
 description: "Streamer, éditeur ImpGeo, photographe du Verse & fondateur de SubOrbital Records."
-theme: jekyll-theme-cayman
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+  - jekyll-remote-theme
 
 # URL : remplace par ton user et repo
 url: "https://yannockverne.github.io"
