--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,6 +5,9 @@ main:
   - title: "Streaming"
     url: /twitch/
 
+  - title: "Giveaway"
+    url: /giveaway/
+
   - title: "Photos"
     url: /photo/
 
